--- a/portfolio.html
+++ b/portfolio.html
@@ -60,14 +60,6 @@
                   <a class="nav-link" href="contact.html"> Contact </a>
                 </li>
               </ul>
-              <div class="user_option">
-                <a href="">
-                  <img src="images/user.png" alt="">
-                </a>
-                <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-                </form>
-              </div>
             </div>
           </div>
         </nav>
@@ -86,11 +78,29 @@
         </h2>
         <p>
           Onze projecten laten zien hoe we creatieve ideeën omzetten in geweldige resultaten voor onze klanten!
-		  <br /> Komt later terug en ontdek welke leuke projecten wij al hebben gerealiseerd! 
+		  <br /> Kom later terug en ontdek welke leuke projecten wij al hebben gerealiseerd! 
 		</p>
       </div>
     </div>
   </section>
+  
+  <p>
+  
+  
+  
+  <br />
+    <br />
+	  <br />
+	    <br />
+		  <br />
+		    <br />
+			  <br />
+			  
+  
+  
+  
+  
+  </p>
 
   <!-- end work section -->
 
@@ -125,7 +135,7 @@
                 <img src="images/envelope-white.png" width="18px" alt="">
               </div>
               <p>
-                siebe@poolvosmedia.be
+                contact@poolvosmedia.be
               </p>
             </div>
           </div>
