--- a/do.html
+++ b/do.html
@@ -59,14 +59,6 @@
                   <a class="nav-link" href="contact.html">Contact </a>
                 </li>
               </ul>
-              <div class="user_option">
-                <a href="">
-                  <img src="images/user.png" alt="">
-                </a>
-                <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-                </form>
-              </div>
             </div>
           </div>
         </nav>
@@ -85,13 +77,15 @@
         </h2>
         <p>
 		  Wij bieden planning, coördinatie en creativiteit om ervoor te zorgen dat de juiste informatie  
-		  <br /> op de juiste manier naar de juiste doelgroep wordt gepresenteerd
+		  <br /> op de juiste manier aan de juiste doelgroep wordt gepresenteerd
         </p>
       </div>
       <div class="do_container">
-        <div class="box arrow-start arrow_bg">
+        <div class="box">
           <div class="img-box">
-            <img src="images/message.png" alt="">
+		<a href="do.html#Interne communicatie">
+            <img src="images/message.png" alt="Clickable Image">
+		</a>
           </div>
           <div class="detail-box">
             <h6>
@@ -100,9 +94,11 @@
             </h6>
           </div>
         </div>
-        <div class="box arrow-middle arrow_bg">
+        <div class="box">
           <div class="img-box">
-            <img src="images/web-design.png" alt="">
+		 <a href="do.html#Grafische vormgeving">
+            <img src="images/web-design.png" alt="Clickable Image">
+		 </a>
           </div>
           <div class="detail-box">
             <h6>
@@ -111,9 +107,11 @@
             </h6>
           </div>
         </div>
-        <div class="box arrow-middle arrow_bg">
+        <div class="box">
           <div class="img-box">
-            <img src="images/copywriter.png" alt="">
+		  <a href="do.html#Copywriting">
+            <img src="images/copywriter.png" alt="Clickable Image">
+		  </a>
           </div>
           <div class="detail-box">
             <h6>
@@ -123,7 +121,9 @@
         </div>
         <div class="box ">
           <div class="img-box">
-            <img src="images/camera.png" alt="">
+      	 <a href="do.html#bedrijfsvideo's">
+           <img src="images/camera.png" alt="Clickable Image">
+		</a>
           </div>
           <div class="detail-box">
             <h6>
@@ -140,7 +140,7 @@
   <section class="work_section layout_padding">
     <div class="container">
       <div class="heading_container">
-		<h2>
+		<h2 id="Interne communicatie">
           Interne communicatie
         </h2>
         <p>
@@ -154,7 +154,7 @@
         </p>
 	<br />
 	<br />
-		<h2>
+		<h2 id="Grafische vormgeving">
           Grafische vormgeving
         </h2>
         <p>		  
@@ -172,7 +172,7 @@
         </p>
 	<br />
 	<br />
-	<h2>
+	<h2 id="Copywriting">
           Copywriting
         </h2>
         <p>
@@ -183,11 +183,11 @@
 		</p>
 	<br />
 	<br />
-		<h2>
+		<h2 id="bedrijfsvideo's">
           Bedrijfsvideo's
         </h2>
         <p>
-          Bij ons kun je terecht voor bedrijfsvideo's op maat die precies aansluiten bij jouw visie en doelen. Of je nu een introductiefilm, 
+          Bij ons kun je terecht voor bedrijfsvideo's die precies aansluiten bij jouw visie en doelen. Of je nu een introductiefilm, 
 		  testimonial of promotievideo wilt, wij zorgen ervoor dat jouw boodschap helder en impactvol wordt overgebracht. Samen creëren we een unieke 
 		  video die jouw bedrijf en verhaal perfect in beeld brengt.
         </p>
@@ -232,7 +232,7 @@
                 <img src="images/envelope-white.png" width="18px" alt="">
               </div>
               <p>
-                siebe@poolvosmedia.be
+                contact@poolvosmedia.be
               </p>
             </div>
           </div>
