--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
                 <li class="nav-item active">
-                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>        
+                  <a class="nav-link" href="index.html"> Home <span class="sr-only">(current)</span></a>        
                 <li class="nav-item">
                   <a class="nav-link" href="do.html"> Wat we doen </a>
                 </li>
@@ -56,17 +56,9 @@
                   <a class="nav-link" href="portfolio.html"> Onze projecten </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact </a>
+                  <a class="nav-link" href="contact.html"> Contact </a>
                 </li>
               </ul>
-              <div class="user_option">
-                <a href="">
-                  <img src="images/user.png" alt="">
-                </a>
-                <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                  <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit"></button>
-                </form>
-              </div>
             </div>
           </div>
         </nav>
@@ -99,7 +91,7 @@
                         Effectieve interne communicatie begint met een goed verhaal, en wij helpen je dat verhaal tot leven te brengen!
                       </p>
                       <div class="">
-                        <a href="">
+                        <a href="contact.html">
                           Contacteer ons
                         </a>
                       </div>
@@ -121,10 +113,10 @@
                         Poolvos Media
                       </h1>
                       <p>
-                        Met onze creatieve vormgeving en scherpe redactie maken we communicatie niet alleen informatief, maar ook inspirerend.
+                        Onze creatieve vormgeving en scherpe redactie maken communicatie niet alleen informatief, maar ook inspirerend.
                       </p>
                       <div class="">
-                        <a href="">
+                        <a href="contact.html">
                           Contacteer ons
                         </a>
                       </div>
@@ -146,10 +138,10 @@
                         Poolvos Media
                       </h1>
                       <p>
-                        Samen zorgen we ervoor dat jouw boodschap helder en aantrekkelijk overkomt, van concept tot uitvoering!
+                        Samen zorgen we ervoor dat jouw boodschap helder en aantrekkelijk overkomt van concept tot uitvoering!
                       </p>
                       <div class="">
-                        <a href="">
+                        <a href="contact.html">
                           Contacteer ons
                         </a>
                       </div>
@@ -176,13 +168,16 @@
         </h2>
         <p>
 		  Wij bieden planning, coördinatie en creativiteit om ervoor te zorgen dat de juiste informatie  
-		  <br /> op de juiste manier naar de juiste doelgroep wordt gepresenteerd
+		  <br /> op de juiste manier aan de juiste doelgroep wordt gepresenteerd
         </p>
       </div>
+	  
       <div class="do_container">
-        <div class="box arrow-start arrow_bg">
-          <div class="img-box">
-            <img src="images/message.png" alt="">
+        <div class="box">
+        <div class="img-box">
+		<a href="do.html#Interne communicatie">
+			<img src="images/message.png" alt="Clickable Image">
+		</a>
           </div>
           <div class="detail-box">
             <h6>
@@ -191,9 +186,11 @@
             </h6>
           </div>
         </div>
-        <div class="box arrow-middle arrow_bg">
+        <div class="box">
           <div class="img-box">
-            <img src="images/web-design.png" alt="">
+		 <a href="do.html#Grafische vormgeving">
+            <img src="images/web-design.png" alt="Clickable Image">
+		 </a>
           </div>
           <div class="detail-box">
             <h6>
@@ -202,9 +199,11 @@
             </h6>
           </div>
         </div>
-        <div class="box arrow-middle arrow_bg">
+        <div class="box">
           <div class="img-box">
-            <img src="images/copywriter.png" alt="">
+		 <a href="do.html#Copywriting">
+            <img src="images/copywriter.png" alt="Clickable Image">
+		 </a>
           </div>
           <div class="detail-box">
             <h6>
@@ -214,14 +213,16 @@
         </div>
         <div class="box ">
           <div class="img-box">
-            <img src="images/camera.png" alt="">
+		 <a href="do.html#bedrijfsvideo's">
+            <img src="images/camera.png" alt="Clickable Image">
+		</a>	
           </div>
           <div class="detail-box">
             <h6>
               Bedrijfsvideo's 
             </h6>
           </div>
-        </div>
+        </div>		
       </div>
     </div>
   </section>
@@ -246,7 +247,7 @@
                 <h5>
                   Lisa Swinnen <br>
                   <span>
-                    Freelancer
+                    Consultant
                   </span>
                 </h5>
                 <img src="images/quote.png" alt="">
@@ -269,12 +270,14 @@
                 <h5>
                   Siebe Stevens <br>
                   <span>
-                    Freelancer
+                    Consultant
                   </span>
                 </h5>
                 <img src="images/quote.png" alt="">
                 <p>
-                  Dipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                  <i> Als ervaren eindredacteur help ik bedrijven bij het creëren 
+				  van impactvolle video's die hun boodschap versterken 
+				  </i>
                 </p>
               </div>
             </div>
@@ -286,7 +289,7 @@
               </div>
               <div class="detail-box">
                 <h5>
-                  Samenwerking <br>
+                  Samenwerken <br>
                   <span>
                    met Poolvos Media? 
                   </span>
@@ -324,10 +327,10 @@
         <div class="col-md-3 col-sm-6">
           <div class="detail-box">
             <h2>
-              20+
+              5+
             </h2>
             <h5>
-             Verschillende industrieën
+             Verschillende sectoren
             </h5>
           </div>
         </div>
@@ -337,7 +340,7 @@
               1000+
             </h2>
             <h5>
-              Creatieve ideeën
+              Frisse ideeën
             </h5>
           </div>
         </div>
@@ -347,7 +350,7 @@
               1500+
             </h2>
             <h5>
-              Tassen koffie
+              Warme choco's
             </h5>
           </div>
         </div>
@@ -358,47 +361,53 @@
   <!-- end target section -->
 
 
-  <!-- contact section -->
+    <!-- contact section -->
 
-  <section class="contact_section layout_padding">
-    <div class="container">
+<section class="contact_section layout_padding">
+  <div class="container">
+    <div class="heading_container">
+      <h2>Neem contact op met ons</h2>
+    </div>
 
-      <div class="heading_container">
-        <h2>
-          Neem contact op met ons
-        </h2>
-      </div>
-      <div class="">
-        <div class="">
-          <div class="row">
-            <div class="col-md-9 mx-auto">
-              <div class="contact-form">
-                <form action="">
-                  <div>
-                    <input type="text" placeholder="Naam ">
-                  </div>
-                  <div>
-                    <input type="text" placeholder="Telefoonnummer ">
-                  </div>
-                  <div>
-                    <input type="email" placeholder="E-mailadres">
-                  </div>
-                  <div>
-                    <input type="text" placeholder="Bericht" class="input_message">
-                  </div>
-                  <div class="d-flex justify-content-center">
-                    <button type="submit" class="btn_on-hover">
-                      Verzenden
-                    </button>
-                  </div>
-                </form>
-              </div>
+    <form action="https://api.web3forms.com/submit" method="POST">
+      <!-- Hidden access key -->
+      <input type="hidden" name="access_key" value="68cad86e-741f-475f-b6d8-4be5032a3e3f">
+
+      <div class="row">
+        <div class="col-md-9 mx-auto">
+          <div class="contact-form">
+            <!-- Name Field -->
+            <div class="form-group">
+              <input type="text" name="name" placeholder="Naam" class="form-control" required>
+            </div>
+
+            <!-- Phone Field -->
+            <div class="form-group">
+              <input type="text" name="phone" placeholder="Telefoonnummer" class="form-control" required>
+            </div>
+
+            <!-- Email Field -->
+            <div class="form-group">
+              <input type="email" name="email" placeholder="E-mailadres" class="form-control" required>
+            </div>
+
+            <!-- Message Field -->
+            <div class="form-group">
+              <textarea name="message" placeholder="Bericht" class="form-control input_message" rows="5" required></textarea>
+            </div>
+
+            <!-- Submit Button -->
+            <div class="d-flex justify-content-center">
+              <button type="submit" class="btn btn-primary btn_on-hover">
+                Verzenden
+              </button>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </form>
+  </div>
+</section>
 
 
   <!-- end contact section -->
@@ -435,7 +444,7 @@
                 <img src="images/envelope-white.png" width="18px" alt="">
               </div>
               <p>
-                siebe@poolvosmedia.be
+                contact@poolvosmedia.be
               </p>
             </div>
           </div>
