--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                 <img src="images/envelope-white.png" width="18px" alt="">
               </div>
               <p>
-                contact@poolvosmedia.be
+                Contact@poolvosmedia.be
               </p>
             </div>
           </div>
