--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="do.html"> Wat wij doen </a>
+                  <a class="nav-link" href="do.html"> Wat we doen </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="portfolio.html"> Onze projecten </a>
